--- a/submission_7/football_DAjesuschrist.tex
+++ b/submission_7/football_DAjesuschrist.tex
@@ -972,7 +972,7 @@ Observations & 3,205 & 3,205 & 3,204 & 3,204 & 3,205 & 3,205 & 3,204 & 3,204 & 3
 
 \subsection{Characteristics of domestic abuse cases on England football days} \label{lastsection}
 
-Our dataset allows us to further explore various characteristics of alcohol and non-alcohol-related domestic abuse perpetrated on England match days. For these analyses, we restricted our dataset to domestic abuse cases with one offender and one victim (about 87\% of overall cases). First, using a series of logistic regressions, we investigate whether these cases are more likely to be newly reported, publicly perpetrated, or result in an injury. We find no evidence that domestic abuse cases perpetrated on England match days are more likely to be newly reported (see Table \ref{Characteristics1} in the Appendix) compared to domestic abuse cases occurring on non-match days. Our results indicate that, compared to non-match days, reported non-alcohol-related cases are more likely to be perpetrated in public on England loss days. 
+Our dataset allows us to further explore various characteristics of alcohol and non-alcohol-related domestic abuse perpetrated on England match days. For these analyses, we restrict our dataset to domestic abuse cases with one offender and one victim (about 87\% of overall cases). First, using a series of logistic regressions, we investigate whether these cases are more likely to be newly reported, publicly perpetrated, or result in an injury. We find no evidence that domestic abuse cases perpetrated on England match days are more likely to be newly reported (see Table \ref{Characteristics1} in the Appendix) compared to domestic abuse cases occurring on non-match days. Our results indicate that, compared to non-match days, reported non-alcohol-related cases are more likely to be perpetrated in public on England loss days. 
 
 
 
@@ -1003,7 +1003,7 @@ Our key finding is that an England victory in a national football tournament is 
 We also found evidence for a remarkably similar, 47\% increase in the number of alcohol-related other (non domestic-abuse related) violent cases. While it is possible that misclassified domestic abuse cases contribute to this result (e.g, if the victim chooses not to disclose any relationship to the offender), these results suggests that the increase in alcohol-related violence following an England victory is not limited to domestic settings. 
 
 
-Our detailed crime dataset allowed us to explore the temporal pattern of the increase in alcohol-related domestic abuse on England match days. This analysis has revealed that the increase starts in the three-hour period of the match, peaks in the three-hour period afterwards, followed by a gradual decline. This temporal pattern is strongly consistent with a causal link between England victories and the observed increase in the number of alcohol-related domestic abuse cases, suggesting that prolonged, alcohol-fuelled celebrations following an England victory creates an environment where violent behaviours are more likely to manifest. We see these results as strong quantitative evidence that alcohol plays an instrumental role in the relationship between football and violent behaviour in domestic, and other settings. 
+Our detailed crime dataset allowed us to explore the temporal pattern of the increase in alcohol-related domestic abuse on England match days. This analysis has revealed that the increase starts in the three-hour period of the match, peaks in the three-hour period afterwards, followed by a gradual decline. This temporal pattern is strongly consistent with a causal link between England victories and the observed increase in the number of alcohol-related domestic abuse cases. We see these results as strong quantitative evidence that alcohol plays an instrumental role in the relationship between football and violent behaviour in domestic, and other settings. 
 
 
 
@@ -1019,13 +1019,13 @@ Our detailed crime dataset allowed us to explore the temporal pattern of the inc
  Our offender-victim gender subgroup analysis suggest that the increase is the strongest in the group of Male to Female domestic alcohol-related abuse cases. However, it should be noted that substantial differences in the number of cases by gender group hinders a precise estimation of the effect of football on alcohol and non-alcohol-related domestic abuse (illustrated by the width of the confidence intervals in the other three gender groups). This is because a male offender and a female victim is by far the most common gender group in our dataset (78\%), followed by female to male (10\%), male to male (7\%), and female to female (5\%) cases.
 
 
-We also examined whether the link between England victories and domestic abuse is specific to football, by focusing on England's second most popular sport, rugby. Our results provide no evidence that England matches in the annual Six Nations rugby tournament affect the number of reported domestic abuse cases, alcohol-related or not, potentially stemming from differences in timing, media coverage, audience numbers, and the involvement of alcohol between the two sport tournaments.
+We also examined whether the link between England victories and domestic abuse is specific to football, by focusing on England's second most popular sport, rugby. Our results provide no evidence that England matches in the annual Six Nations international rugby tournament affect the number of reported domestic abuse cases, alcohol-related or not, potentially stemming from differences in timing, media coverage, audience numbers, and the involvement of alcohol between the two sport tournaments.
 
-To further probe the robustness of our results, we re-analysed data from a previous study using police-recorded domestic abuse data from Lancashire by \citeNP{Kirby2014}. Our re-analysis almost perfectly replicates the win effect seen in our data, though the absence of a loss effect remains a difference between the two studies.
+To further probe the robustness of our results, we re-analysed data from a previous study using police-recorded domestic abuse data from Lancashire by \citeA{Kirby2014}. Our re-analysis almost perfectly replicates the win effect seen in our data, though the absence of a loss effect remains a difference between the two studies.
 
-To explore the source of this discrepancy, we estimated the England match effect in each tournament year. Comparison of the estimates from the only overlapping tournament year (2010) has revealed remarkably similar coefficient estimates from two separate geographical regions in England, giving us confidence that these effects are likely to generalise to other areas within England. These patterns are also in line with findings from an earlier examination by \cite{Brimicombe2012}, who found an increase in the number of domestic abuse cases reported to the police across England on both victory and loss days during the 2010 World Cup.  Most importantly, if the same mechanism lies behind our results, then it suggests that the increase observed in other datasets is also likely to stem from alcohol-related cases. 
+To explore the source of this discrepancy, we estimated the England match effect in each tournament year. Comparison of the estimates from the only overlapping tournament year (2010) has revealed remarkably similar coefficient estimates from two separate geographical regions in England, giving us confidence that these effects are likely to generalise to other areas within England. These patterns are also in line with findings from an earlier examination by \cite{Brimicombe2012}, who found an increase in the number of domestic abuse cases reported to the police across England on both victory and loss days during the 2010 World Cup.  Most importantly, if the same mechanism lies behind these results, then it suggests that the increase observed in other datasets is also likely to stem from alcohol-related cases. 
 
-Our detailed dataset allowed us to further explore the characteristics of domestic abuse perpetrated on England win days. We found no evidence that these cases are more likely to be newly reported, perpetrated in public, result in an injury, or reported sooner. In addition, for repeat cases, we found no evidence England matches affect the temporal pattern of subsequent cases, or affect the likelihood of a previously non-alcohol-related case to re-occur as an alcohol-related case. 
+Our detailed dataset allowed us to further explore the characteristics of domestic abuse perpetrated on England win days. We found no evidence that these cases are more likely to be newly reported, perpetrated in public, result in an injury, or reported sooner. In addition, for repeat cases, we found no evidence suggesting that England matches affect the temporal pattern of subsequent cases, or the likelihood of a previously non-alcohol-related case to re-occur as an alcohol-related case. 
 
  % We have also found a remarkably similar increase in the number of other, alcohol-related violent cases, suggesting that the increase in alcohol-related violence following an England victory is not limited to domestic settings. In addition, the temporal pattern of the increase in the number of domestic abuse cases suggests a causal mechanism, where prolonged, alcohol-fuelled celebrations following an England victory creates an environment where violent behaviours are more likely to manifest. We see these results as strong quantitative evidence that alcohol plays an instrumental role in the relationship between football and violent behaviour in domestic, and other settings. 
 
@@ -1037,7 +1037,7 @@ However, our analyses do not provide support for any of these hypotheses. For ex
 
 In fact, our results suggest a causal link between England victories in national football tournaments and an increase in the number of alcohol-related domestic abuse cases reported to the police. First, England match days were randomly allocated, and the effect is only seen for England wins in alcohol-related cases, which limits the set of confounding factors to those plausibly synchronised with England wins, and those that would affect only alcohol-related domestic abuse. Second, our three-hour analysis shows that the temporal pattern of the increase throughout England match days is highly consistent with a causal link between football and alcohol-related domestic abuse. Finally, by re-analysing a dataset from a previous study, we almost exactly replicated the England win effect seen in our dataset. While the effect of a victory is likely to be highly specific to the context of a particular match (e.g., group stage or knockout stage, previous performance of the team, weather on the day, time of day, etc.), the estimated effect of an England victory on the number of alcohol-related reported domestic abuse cases is robust to different model specifications, using data from a different geographical area, and the exclusion of specific tournament years. 
 
-Despite the strong link between England victories and domestic abuse, the exact pathway through which England wins result in an increase in alcohol-related domestic abuse remains unclear. Anecdotal evidence implies a spike in the number of alcohol poisoning cases following an England victory  \cite{Davies2018}, suggesting that in the case of England, victories of the national football team result in elevated levels of alcohol consumption. Future research could focus on exploring the mechanism through which post-victory intoxication amongst England football fans translate into increased levels of violence (domestic or not).
+Despite the evidence for the link between England victories and domestic abuse, the exact pathway through which England wins result in an increase in alcohol-related domestic abuse remains unclear. Anecdotal evidence implies a spike in the number of alcohol poisoning cases following an England victory  \cite{Davies2018}, suggesting that in the case of England, victories of the national football team result in elevated levels of alcohol consumption. This is consistent with the temporal pattern of the England win effect we have seen in our dataset, suggesting that prolonged, alcohol-fuelled celebrations following an England victory could create an environment where violent behaviours are more likely to manifest. Future research could focus on exploring the mechanism through which post-victory intoxication amongst England football fans translate into increased levels of violence (domestic or not).
 
 
 An important limitation of our analysis is that it only relies on cases recorded by the police, while the vast majority of domestic abuse cases do not get reported. Future investigations of the link between football, alcohol, and domestic abuse should aim to combine data from various sources (e.g., police data, calls to shelters, hospital admissions, etc.) to address the potential bias arising from underreporting. In addition, it is important to note that data on alcohol-involvement is subjective, and we do not have information on the level of intoxication. 
