--- a/submission_7/football_DAjesuschrist.tex
+++ b/submission_7/football_DAjesuschrist.tex
@@ -1037,18 +1037,22 @@ However, our analyses do not provide support for any of these hypotheses. For ex
 
 In fact, our results suggest a causal link between England victories in national football tournaments and an increase in the number of alcohol-related domestic abuse cases reported to the police. First, England match days were randomly allocated, and the effect is only seen for England wins in alcohol-related cases, which limits the set of confounding factors to those plausibly synchronised with England wins, and those that would affect only alcohol-related domestic abuse. Second, our three-hour analysis shows that the temporal pattern of the increase throughout England match days is highly consistent with a causal link between football and alcohol-related domestic abuse. Finally, by re-analysing a dataset from a previous study, we almost exactly replicated the England win effect seen in our dataset. While the effect of a victory is likely to be highly specific to the context of a particular match (e.g., group stage or knockout stage, previous performance of the team, weather on the day, time of day, etc.), the estimated effect of an England victory on the number of alcohol-related reported domestic abuse cases is robust to different model specifications, using data from a different geographical area, and the exclusion of specific tournament years. 
 
-Despite the evidence for the link between England victories and domestic abuse, the exact pathway through which England wins result in an increase in alcohol-related domestic abuse remains unclear. Anecdotal evidence implies a spike in the number of alcohol poisoning cases following an England victory  \cite{Davies2018}, suggesting that in the case of England, victories of the national football team result in elevated levels of alcohol consumption. This is consistent with the temporal pattern of the England win effect we have seen in our dataset, suggesting that prolonged, alcohol-fuelled celebrations following an England victory could create an environment where violent behaviours are more likely to manifest. Future research could focus on exploring the mechanism through which post-victory intoxication amongst England football fans translate into increased levels of violence (domestic or not).
+Despite the evidence for the link between England victories and domestic abuse, the exact pathway through which England wins result in an increase in alcohol-related domestic abuse remains unclear. Anecdotal evidence implies a spike in the number of alcohol poisoning cases following an England victory  \cite{Davies2018}, suggesting that in the case of England, victories of the national football team result in elevated levels of alcohol consumption. This is consistent with the temporal pattern of the England win effect we have seen in our results, suggesting that prolonged, alcohol-fuelled celebrations following an England victory can create an environment where violent behaviours are more likely to manifest. Future research could focus on exploring the mechanism through which post-victory intoxication amongst England football fans translate into increased levels of violence (domestic or not).
 
 
-An important limitation of our analysis is that it only relies on cases recorded by the police, while the vast majority of domestic abuse cases do not get reported. Future investigations of the link between football, alcohol, and domestic abuse should aim to combine data from various sources (e.g., police data, calls to shelters, hospital admissions, etc.) to address the potential bias arising from underreporting. In addition, it is important to note that data on alcohol-involvement is subjective, and we do not have information on the level of intoxication. 
-
-
-
-The most comprehensive investigation of the link between sports and domestic abuse by \citeNP{Card2011} found that a surprise loss of the home NFL team leads to a 10\% increase in the rate of IPV cases reported to the police.  The same study found no evidence suggesting that alcohol-involvement was an important factor in the link between NFL matches and IPV, which shows that the link between televised sports, alcohol consumption, and domestic abuse is modulated by a range of contextual factors (some of which is likely to be cultural). 
+An important limitation of our analysis is that it only relies on cases recorded by the police, while the vast majority of domestic abuse cases do not get reported. Future investigations of the link between football, alcohol, and domestic abuse should aim to combine data from various sources (e.g., police data, calls to shelters, hospital admissions, etc.) to address the potential bias arising from underreporting. In addition, it is important to note that data on alcohol-involvement is subjective, and we do not have any information on the actual level of intoxication. 
 
 
 
-   Based on the pre-match betting odds, all of the England victories were expected in our dataset. This suggests that in the context of England's participation in national football tournaments, it is living up to the expectations of the fans that results in the largest emotional effect (as opposed to an unexpected loss) and could subsequently affect levels of alcohol consumption, resulting in disinhibitory effects increasing the likelihood of violent behaviours. Indeed, English newspapers' narratives about the team's performance in these tournaments are characterised with high levels of optimism, expectation and yearning for the glory of the 1966 World Cup \cite{Vincent2010}. Previous research has demonstrated how the vicarious experience of watching their team play can increase supporter's testosterone and cortisol levels, even when they expect their team to win, suggested to be an adaptive response to the perceived threat to one's social identity \cite{VanderMeij2012}. 
+The most comprehensive investigation of the link between sports and domestic abuse by \citeA{Card2011} used NFL data, and found that a surprise loss of the home team leads to a 10\% increase in the rate of IPV cases reported to the police. They found no evidence for the modulating role of alcohol (i.e., the same increase was observed for alcohol- and non-alcohol-related cases). This result is clearly in contrast with our findings, which instead suggest that England victories have the largest effect on the reported number of alcohol-related domestic abuse cases.
+
+While we can only hypothesise about the reason for this discrepancy, it is worth noting that there several key differences between these studies (e.g., country, sport, type of tournament), all of which are likely to impact on the link between sports fixtures and domestic abuse. \citeauthor{Card2011}'s results suggest that in the context of NFL, the negative emotional shock experienced by the fan who expected his team to win ultimately manifests in violence. We argue that in the case of England's participation in international football tournaments, the historical context is key to understand why victories have the largest impact on alcohol-related domestic abuse.
+
+
+Based on the pre-match betting odds, all of the England victories were expected in our dataset. This suggests that in the context of England and national football tournaments, it is living up to the expectations of the fans that results in the largest emotional effect (as opposed to an unexpected loss). Illustrating the national importance of a victory, English newspapers' narratives about the team's performance in these tournaments are often characterised with high levels of optimism, expectation and yearning for the glory of the 1966 World Cup which was won by England \cite{Vincent2010}. We conjecture that in the case of England, the fulfilment of these expectations can have a substantial impact on fans' alcohol consumption through post-match nationwide celebrations, resulting in disinhibitory effects increasing the likelihood of violent behaviours. 
+
+%Previous research has demonstrated how the vicarious experience of watching their team play can increase supporter's testosterone and cortisol levels, even when they expect their team to win, suggested to be an adaptive response to the perceived threat to one's social identity \cite{VanderMeij2012}. 
+   
 
 
 For victims, domestic abuse does not occur once every four years following a football match, but is a lived experience of constant fear \cite{Brooks-Hay2018}. Nevertheless, we believe that our results provide a deeper understanding of the environments that could increase the likelihood of perpetration. In particular, this study has shown that the experience of a national success in an international football tournament substantially increases the likelihood of alcohol-related violent behaviours manifesting in domestic (and other) settings. 
