--- a/submission_7/footballrefsrev.bib
+++ b/submission_7/footballrefsrev.bib
@@ -12,7 +12,22 @@ author = {Graham, Kathryn and Wilson, Ingrid and Taft, Angela},
 journal = {Drug and Alcohol Review},
 keywords = {drinking culture,expectancy,intimate partner violence,policy,violence},
 title = {{The broader context of preventing alcohol-related intimate partner violence}},
-year = {2017}
+year = {2017},
+number = {1},
+pages = {10--12},
+volume = {36}
+}
+
+@article{Leonard2017,
+abstract = {Research over the past 30 years has demonstrated that excessive alcohol use meets all of the epidemiological criteria for causality. While neither a necessary nor a sufficient cause, excessive alcohol use does contribute to the occurrence of partner violence and that contribution is approximately equal to other contributing causes such as gender roles, anger and marital functioning. Current theories of how excessive drinking results in partner violence provide a potentially valuable framework with respect to who should be targeted for interventions with respect to alcohol-related partner violence and what those interventions should address.},
+author = {Leonard, Kenneth E. and Quigley, Brian M.},
+journal = {Drug and Alcohol Review},
+keywords = {alcohol,intimate partner violence},
+title = {{Thirty years of research show alcohol to be a cause of intimate partner violence: Future research needs to identify who to treat and how to treat them}},
+year = {2017},
+number = {1},
+pages = {10--12},
+volume = {36}
 }
 @article{Parry2014,
 abstract = {Despite recent cross-cultural analyses of sport fandom, work in the field is still limited. To partially fill this research void, the current investigation investigated sport fandom in the United Kingdom, and included cross-cultural comparison with existing data. Four research areas were reviewed: a) sport fan behaviors, b) socialization into the sport fan role, c) identification with the social role of sport fan, and d) team identification. A sample of 252 students at a university in the United Kingdom completed a questionnaire packet assessing demographics, fandom, fan behaviors, team identification, and the impact of various socialization agents. Results revealed gender differences in behavior (e.g., males reported greater levels of participation than females) and both team identification and fandom were significant predictors of fan behavior. The importance of the father as a socialization agent was highlighted throughout the sample, and levels of identification were generally high. Cross-cultural analysis indicated that socialization agents for the UK were more varied than other countries, UK fans were more likely to watch sport live, and UK males were more likely to watch and discuss sport daily. In general, it was demonstrated that UK fan behavior was closer to that of Americans and, in particular, Australian fans, rather than fans in European (Greek and Norwegian) samples. (PsycINFO Database Record (c) 2014 APA, all rights reserved) (journal abstract)},
@@ -49,14 +64,7 @@ title = {{At the Intersection of Interpersonal Violence, Masculinity, and Alcoho
 volume = {16},
 year = {2010}
 }
-@article{Leonard2017,
-abstract = {Research over the past 30 years has demonstrated that excessive alcohol use meets all of the epidemiological criteria for causality. While neither a necessary nor a sufficient cause, excessive alcohol use does contribute to the occurrence of partner violence and that contribution is approximately equal to other contributing causes such as gender roles, anger and marital functioning. Current theories of how excessive drinking results in partner violence provide a potentially valuable framework with respect to who should be targeted for interventions with respect to alcohol-related partner violence and what those interventions should address.},
-author = {Leonard, Kenneth E. and Quigley, Brian M.},
-journal = {Drug and Alcohol Review},
-keywords = {alcohol,intimate partner violence},
-title = {{Thirty years of research show alcohol to be a cause of intimate partner violence: Future research needs to identify who to treat and how to treat them}},
-year = {2017}
-}
+
 @misc{Office2019,
 author = {{Home Office}},
 pages = {9},
@@ -140,7 +148,10 @@ abstract = {A property of the Poisson regression model is mean-variance equality
 author = {Cameron, A. Colin and Trivedi, Pravin K.},
 journal = {Journal of Econometrics},
 title = {{Regression-based tests for overdispersion in the Poisson model}},
-year = {1990}
+year = {1990},
+number = {3},
+pages = {347--364},
+volume = {47}
 }
 @misc{Ipsos2003,
 month = {December},
@@ -293,7 +304,7 @@ title = {{The role of alcohol in intimate partner violence: Causal behaviour or 
 volume = {13},
 year = {2015}
 }
-@techreport{Homeoffice,
+@misc{Homeoffice,
 author = {{Home Office}},
 institution = {Home Office},
 title = {{Police funding for England and Wales 2015 to 2019}},
